samples/bookinfo/30-traffic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-traffic
  namespace: bookinfo
  labels:
    app: bookinfo-traffic
    rhcl.demo/sample: bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-traffic
  template:
    metadata:
      labels:
        app: bookinfo-traffic
        rhcl.demo/sample: bookinfo
    spec:
      containers:
        - name: gerador
          image: image-registry.openshift-image-registry.svc:5000/bookinfo/bookinfo-traffic:latest
          resources:
            requests: {cpu: 50m, memory: 160Mi}
            limits: {memory: 320Mi}
